refactor/documentation swagger
